--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="index.html" class="nav-item nav-link active">PAGINA PRINCIPAL</a>
                         <a href="about.html" class="nav-item nav-link">Nosotros</a>
                         <a href="service.html" class="nav-item nav-link">Servicios</a>
                         <div class="nav-item dropdown">
@@ -88,13 +88,13 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">PAGINAS</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="team.html" class="dropdown-item">The Team</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                                <a href="team.html" class="dropdown-item">Equipo</a>
+                                <a href="testimonial.html" class="dropdown-item">Tesmimonios</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">contacto</a>
                     </div>
                 </div>
             </nav>
@@ -136,7 +136,7 @@
             </div>
             <div class="col-xl-2 col-lg-4 col-md-6 px-2">
                 <select class="custom-select px-4 mb-3" style="height: 50px;">
-                    <option selected>seleccion De Carro</option>
+                    <option selected>Seleccion Vehiculo</option>
                     <option value="1">Car 1</option>
                     <option value="2">Car 1</option>
                     <option value="3">Car 1</option>
@@ -158,9 +158,9 @@
                     <img class="w-100" src="img/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-md-3">Renta Car</h4>
+                            <h4 class="text-white text-uppercase mb-md-3">Reyal cars</h4>
                             <h1 class="display-1 text-white mb-md-4">Los mejores coches de alquiler en su ubicación</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Reserva Ahora</a>
+                            <a href="booking.html" class="btn btn-primary py-md-3 px-md-5 mt-2">Reserva Ahora</a>
                         </div>
                     </div>
                 </div>
@@ -168,9 +168,9 @@
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-md-3">Renta Car</h4>
+                            <h4 class="text-white text-uppercase mb-md-3">Reyal cars</h4>
                             <h1 class="display-1 text-white mb-md-4">Coches de calidad y garantia de comodida</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Reserve Now</a>
+                            <a href="booking.html" class="btn btn-primary py-md-3 px-md-5 mt-2">Reserva ahora</a>
                         </div>
                     </div>
                 </div>
@@ -775,8 +775,7 @@
         </div>
     </div>
     <div class="container-fluid bg-dark py-4 px-sm-3 px-md-5">
-        <p class="mb-2 text-center text-body">&copy; <a href="#">Your Site Name</a>. All Rights Reserved.</p>
-        <p class="m-0 text-center text-body">Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
+        <p class="mb-2 text-center text-body">&copy; <a href="#">Proyecto Final Lenguaje Programacion 1</a>. Reservados todos los derechos. </p>
     </div>
     <!-- Footer End -->
 
