Cambios subtitulos en menu vehiculos

--- a/car.html
+++ b/car.html
@@ -80,7 +80,7 @@
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Cars</a>
+                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Vehiculos</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="car.html" class="dropdown-item">Listado de carros</a>
                                 <a href="detail.html" class="dropdown-item">Detalles de carros </a>
@@ -152,11 +152,11 @@
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header">
-        <h1 class="display-3 text-uppercase text-white mb-3">Car Listing</h1>
+        <h1 class="display-3 text-uppercase text-white mb-3">Lista de Vehiculos</h1>
         <div class="d-inline-flex text-white">
-            <h6 class="text-uppercase m-0"><a class="text-white" href="">Home</a></h6>
+            <h6 class="text-uppercase m-0"><a class="text-white" href="">Inicio</a></h6>
             <h6 class="text-body m-0 px-3">/</h6>
-            <h6 class="text-uppercase text-body m-0">Car Listing</h6>
+            <h6 class="text-uppercase text-body m-0">Lista de vehiculos</h6>
         </div>
     </div>
     <!-- Page Header Start -->
