--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <img class="w-100" src="img/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-md-3">Reyal cars</h4>
+                            <h4 class="text-white text-uppercase mb-md-3">Royal cars</h4>
                             <h1 class="display-1 text-white mb-md-4">Los mejores coches de alquiler en su ubicación</h1>
                             <a href="booking.html" class="btn btn-primary py-md-3 px-md-5 mt-2">Reserva Ahora</a>
                         </div>
@@ -168,7 +168,7 @@
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-md-3">Reyal cars</h4>
+                            <h4 class="text-white text-uppercase mb-md-3">Royal cars</h4>
                             <h1 class="display-1 text-white mb-md-4">Coches de calidad y garantia de comodida</h1>
                             <a href="booking.html" class="btn btn-primary py-md-3 px-md-5 mt-2">Reserva ahora</a>
                         </div>
@@ -236,7 +236,7 @@
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
             <h1 class="display-1 text-primary text-center">02</h1>
-            <h1 class="display-4 text-uppercase text-center mb-5">Our Services</h1>
+            <h1 class="display-4 text-uppercase text-center mb-5">Tus Servicios</h1>
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-2">
                     <div class="service-item d-flex flex-column justify-content-center px-4 mb-4">
