--- a/team.html
+++ b/team.html
@@ -76,7 +76,7 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
+                        <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">NOSOTROS</a>
                         <a href="service.html" class="nav-item nav-link">SERVICIOS</a>
                         <div class="nav-item dropdown">
@@ -156,7 +156,7 @@
         <div class="d-inline-flex text-white">
             <h6 class="text-uppercase m-0"><a class="text-white" href="">Home</a></h6>
             <h6 class="text-body m-0 px-3">/</h6>
-            <h6 class="text-uppercase text-body m-0">The Team</h6>
+            <h6 class="text-uppercase text-body m-0">Nuestro Equipo</h6>
         </div>
     </div>
     <!-- Page Header Start -->
