ajustes plantilla index, booking

--- a/booking.html
+++ b/booking.html
@@ -259,10 +259,10 @@
                     <div class="mb-5">
                         <div class="row">
                             <div class="col-6 form-group">
-                                <input type="text" class="form-control p-4" placeholder="First Name" required="required">
+                                <input type="text" id="nombres" class="form-control p-4" placeholder="Nombres" required="required">
                             </div>
                             <div class="col-6 form-group">
-                                <input type="text" class="form-control p-4" placeholder="Last Name" required="required">
+                                <input type="text" id="Apellidos" class="form-control p-4" placeholder="Apellidos" required="required">
                             </div>
                         </div>
                         <div class="row">
