ajustes plantilla index, about, agregar imagenes

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ROYAL CARS - Car Rental HTML Template</title>
+    <title>ROYAL CARS</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -76,25 +76,25 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link active">About</a>
-                        <a href="service.html" class="nav-item nav-link">Service</a>
+                        <a href="index.html" class="nav-item nav-link active">PAGINA PRINCIPAL</a>
+                        <a href="about.html" class="nav-item nav-link">Nosotros</a>
+                        <a href="service.html" class="nav-item nav-link">Servicios</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Cars</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="car.html" class="dropdown-item">Car Listing</a>
-                                <a href="detail.html" class="dropdown-item">Car Detail</a>
-                                <a href="booking.html" class="dropdown-item">Car Booking</a>
+                                <a href="car.html" class="dropdown-item">Listado de carros</a>
+                                <a href="detail.html" class="dropdown-item">Detalles de carros </a>
+                                <a href="booking.html" class="dropdown-item">Resarva tu carro</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">PAGINAS</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="team.html" class="dropdown-item">The Team</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                                <a href="team.html" class="dropdown-item">Equipo</a>
+                                <a href="testimonial.html" class="dropdown-item">Tesmimonios</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">contacto</a>
                     </div>
                 </div>
             </nav>
@@ -108,42 +108,42 @@
         <div class="row mx-n2">
             <div class="col-xl-2 col-lg-4 col-md-6 px-2">
                 <select class="custom-select px-4 mb-3" style="height: 50px;">
-                    <option selected>Pickup Location</option>
-                    <option value="1">Location 1</option>
-                    <option value="2">Location 2</option>
-                    <option value="3">Location 3</option>
+                    <option selected>Ubicacion Recogida</option>
+                    <option value="1">Pereira</option>
+                    <option value="2">Dosquebradas</option>
+                    <option value="3">Santa Rosa</option>
                 </select>
             </div>
             <div class="col-xl-2 col-lg-4 col-md-6 px-2">
                 <select class="custom-select px-4 mb-3" style="height: 50px;">
-                    <option selected>Drop Location</option>
-                    <option value="1">Location 1</option>
-                    <option value="2">Location 2</option>
-                    <option value="3">Location 3</option>
+                    <option selected>Ubicacion Entrega</option>
+                    <option value="1">Pereira</option>
+                    <option value="2">Dosquebradas</option>
+                    <option value="3">Santa Rosa</option>
                 </select>
             </div>
             <div class="col-xl-2 col-lg-4 col-md-6 px-2">
                 <div class="date mb-3" id="date" data-target-input="nearest">
-                    <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Pickup Date"
+                    <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Fecha De Recogida"
                         data-target="#date" data-toggle="datetimepicker" />
                 </div>
             </div>
             <div class="col-xl-2 col-lg-4 col-md-6 px-2">
                 <div class="time mb-3" id="time" data-target-input="nearest">
-                    <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Pickup Time"
+                    <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Hora De Recogida"
                         data-target="#time" data-toggle="datetimepicker" />
                 </div>
             </div>
             <div class="col-xl-2 col-lg-4 col-md-6 px-2">
                 <select class="custom-select px-4 mb-3" style="height: 50px;">
-                    <option selected>Select A Car</option>
+                    <option selected>Seleccion Vehiculo</option>
                     <option value="1">Car 1</option>
                     <option value="2">Car 1</option>
                     <option value="3">Car 1</option>
                 </select>
             </div>
             <div class="col-xl-2 col-lg-4 col-md-6 px-2">
-                <button class="btn btn-primary btn-block mb-3" type="submit" style="height: 50px;">Search</button>
+                <button class="btn btn-primary btn-block mb-3" type="submit" style="height: 50px;">Buscar</button>
             </div>
         </div>
     </div>
@@ -152,11 +152,11 @@
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header">
-        <h1 class="display-3 text-uppercase text-white mb-3">About</h1>
+        <h1 class="display-3 text-uppercase text-white mb-3">Nosotros</h1>
         <div class="d-inline-flex text-white">
-            <h6 class="text-uppercase m-0"><a class="text-white" href="">Home</a></h6>
+            <h6 class="text-uppercase m-0"><a class="text-white" href="">Pagina principal</a></h6>
             <h6 class="text-body m-0 px-3">/</h6>
-            <h6 class="text-uppercase text-body m-0">About</h6>
+            <h6 class="text-uppercase text-body m-0">Nosotros</h6>
         </div>
     </div>
     <!-- Page Header Start -->
@@ -165,7 +165,7 @@
     <!-- About Start -->
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
-            <h1 class="display-4 text-uppercase text-center mb-5">Welcome To <span class="text-primary">Royal Cars</span></h1>
+            <h1 class="display-4 text-uppercase text-center mb-5">Bienvenidos a <span class="text-primary">Royal Cars</span></h1>
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
                     <img class="w-75 mb-4" src="img/about.png" alt="">
@@ -178,7 +178,7 @@
                         <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
                             <i class="fa fa-2x fa-headset text-secondary"></i>
                         </div>
-                        <h4 class="text-uppercase m-0">24/7 Car Rental Support</h4>
+                        <h4 class="text-uppercase m-0">Soporte de alquiler de autos 24 horas al día, 7 días a la semana</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-2">
@@ -186,7 +186,7 @@
                         <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
                             <i class="fa fa-2x fa-car text-secondary"></i>
                         </div>
-                        <h4 class="text-light text-uppercase m-0">Car Reservation Anytime</h4>
+                        <h4 class="text-light text-uppercase m-0">Reserva de coche en cualquier momento</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-2">
@@ -194,7 +194,7 @@
                         <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
                             <i class="fa fa-2x fa-map-marker-alt text-secondary"></i>
                         </div>
-                        <h4 class="text-uppercase m-0">Lots Of Pickup Locations</h4>
+                        <h4 class="text-uppercase m-0">Muchas ubicaciones de recogida</h4>
                     </div>
                 </div>
             </div>
@@ -211,18 +211,18 @@
                     <div class="px-5 bg-secondary d-flex align-items-center justify-content-between" style="height: 350px;">
                         <img class="img-fluid flex-shrink-0 ml-n5 w-50 mr-4" src="img/banner-left.png" alt="">
                         <div class="text-right">
-                            <h3 class="text-uppercase text-light mb-3">Want to be driver?</h3>
+                            <h3 class="text-uppercase text-light mb-3">¿Quieres ser conductor?</h3>
                             <p class="mb-4">Lorem justo sit sit ipsum eos lorem kasd, kasd labore</p>
-                            <a class="btn btn-primary py-2 px-4" href="">Start Now</a>
+                            <a class="btn btn-primary py-2 px-4" href="">Empezar ahora</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 px-0">
                     <div class="px-5 bg-dark d-flex align-items-center justify-content-between" style="height: 350px;">
                         <div class="text-left">
-                            <h3 class="text-uppercase text-light mb-3">Looking for a car?</h3>
+                            <h3 class="text-uppercase text-light mb-3">¿Buscas un auto?</h3>
                             <p class="mb-4">Lorem justo sit sit ipsum eos lorem kasd, kasd labore</p>
-                            <a class="btn btn-primary py-2 px-4" href="">Start Now</a>
+                            <a class="btn btn-primary py-2 px-4" href="">Empezar ahora</a>
                         </div>
                         <img class="img-fluid flex-shrink-0 mr-n5 w-50 ml-4" src="img/banner-right.png" alt="">
                     </div>
@@ -271,11 +271,11 @@
     <div class="container-fluid bg-secondary py-5 px-sm-3 px-md-5" style="margin-top: 90px;">
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-uppercase text-light mb-4">Get In Touch</h4>
-                <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope text-white mr-3"></i>info@example.com</p>
-                <h6 class="text-uppercase text-white py-2">Follow Us</h6>
+                <h4 class="text-uppercase text-light mb-4">Ponte en contacto</h4>
+                <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i>Mz 16 Casa 90 Montebonito, Dosquebradas Risaralda, Colombia</p>
+                <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>3207803312</p>
+                <p><i class="fa fa-envelope text-white mr-3"></i>royalcars@gmail.com</p>
+                <h6 class="text-uppercase text-white py-2">Síganos</h6>
                 <div class="d-flex justify-content-start">
                     <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -295,7 +295,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-uppercase text-light mb-4">Car Gallery</h4>
+                <h4 class="text-uppercase text-light mb-4">Galería de autos</h4>
                 <div class="row mx-n1">
                     <div class="col-4 px-1 mb-2">
                         <a href=""><img class="w-100" src="img/gallery-1.jpg" alt=""></a>
@@ -318,7 +318,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-uppercase text-light mb-4">Newsletter</h4>
+                <h4 class="text-uppercase text-light mb-4">Información</h4>
                 <p class="mb-4">Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
                 <div class="w-100 mb-3">
                     <div class="input-group">
