--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4" style="width: 100px; height: 100px;">
                             <i class="fa fa-2x fa-car text-secondary"></i>
                         </div>
-                        <h4 class="text-light text-uppercase m-0">CReserva en cualquier momento</h4>
+                        <h4 class="text-light text-uppercase m-0">Reserva en cualquier momento</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-2">
@@ -474,13 +474,13 @@
     <div class="container-fluid py-5">
         <div class="container py-5">
             <h1 class="display-1 text-primary text-center">04</h1>
-            <h1 class="display-4 text-uppercase text-center mb-5">Conozca a nuestro equipo</h1>
+            <h1 class="display-4 text-uppercase text-center mb-5">nuestro equipo</h1>
             <div class="owl-carousel team-carousel position-relative" style="padding: 0 30px;">
                 <div class="team-item">
-                    <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/montes.jpg" alt="">
                     <div class="position-relative py-4">
-                        <h4 class="text-uppercase">Susana Restrepo</h4>
-                        <p class="m-0">Designation</p>
+                        <h4 class="text-uppercase">John Montes</h4>
+                        <p class="m-0">Ingeniero de sistemas</p>
                         <div class="team-social position-absolute w-100 h-100 d-flex align-items-center justify-content-center">
                             <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -489,10 +489,10 @@
                     </div>
                 </div>
                 <div class="team-item">
-                    <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/Elkin.jpg" alt="">
                     <div class="position-relative py-4">
                         <h4 class="text-uppercase">Elkin Gutierrez</h4>
-                        <p class="m-0">Designation</p>
+                        <p class="m-0">Ingeniero de sistemas</p>
                         <div class="team-social position-absolute w-100 h-100 d-flex align-items-center justify-content-center">
                             <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -501,10 +501,10 @@
                     </div>
                 </div>
                 <div class="team-item">
-                    <img class="img-fluid w-100" src="img/team-4.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/alexis.jpg" alt="">
                     <div class="position-relative py-4">
                         <h4 class="text-uppercase">Alexis Medina</h4>
-                        <p class="m-0">Designation</p>
+                        <p class="m-0">Ingeniero de sistemas</p>
                         <div class="team-social position-absolute w-100 h-100 d-flex align-items-center justify-content-center">
                             <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -552,14 +552,14 @@
     <div class="container-fluid py-5">
         <div class="container py-5">
             <h1 class="display-1 text-primary text-center">05</h1>
-            <h1 class="display-4 text-uppercase text-center mb-5">La opinión de nuestros clientes</h1>
+            <h1 class="display-4 text-uppercase text-center mb-5">nuestros clientes</h1>
             <div class="owl-carousel testimonial-carousel">
                 <div class="testimonial-item d-flex flex-column justify-content-center px-4">
                     <div class="d-flex align-items-center justify-content-between mb-3">
                         <img class="img-fluid ml-n4" src="img/testimonial-1.jpg" alt="">
                         <h1 class="display-2 text-white m-0 fa fa-quote-right"></h1>
                     </div>
-                    <h4 class="text-uppercase mb-2">Jhon Jairo Montes</h4>
+                    <h4 class="text-uppercase mb-2">Nombre cliente</h4>
                     <i class="mb-2">Ingeniero de sistemas</i>
                     <p class="m-0">Kasd dolor no lorem nonumy sit labore tempor at justo rebum rebum stet, justo elitr dolor amet sit sea sed</p>
                 </div>
@@ -568,7 +568,7 @@
                         <img class="img-fluid ml-n4" src="img/testimonial-1.jpg" alt="">
                         <h1 class="display-2 text-white m-0 fa fa-quote-right"></h1>
                     </div>
-                    <h4 class="text-uppercase mb-2">Raul Estaban Aguado</h4>
+                    <h4 class="text-uppercase mb-2">Nombre cliente</h4>
                     <i class="mb-2">Ingeniero en sistemas</i>
                     <p class="m-0">Kasd dolor no lorem nonumy sit labore tempor at justo rebum rebum stet, justo elitr dolor amet sit sea sed</p>
                 </div>
@@ -577,7 +577,7 @@
                         <img class="img-fluid ml-n4" src="img/testimonial-3.jpg" alt="">
                         <h1 class="display-2 text-white m-0 fa fa-quote-right"></h1>
                     </div>
-                    <h4 class="text-uppercase mb-2">Client Name</h4>
+                    <h4 class="text-uppercase mb-2">Nombre cliente</h4>
                     <i class="mb-2">Profession</i>
                     <p class="m-0">Kasd dolor no lorem nonumy sit labore tempor at justo rebum rebum stet, justo elitr dolor amet sit sea sed</p>
                 </div>
